<resources>
    <string name="app_name">样品异常检测</string>
    <string name="title_sampleTest">样品检测</string>
    <string name="title_history">历史记录</string>
    <string name="title_useGuide">使用指南</string>
    <string name="title_mine">我的</string>
    <string name="text_detection_concentration">检测物浓度:</string>
    <string name="text_Corrected_RGB_color">校正后RGB颜色:</string>
    <string name="text_Corrected_HSV_color">校正后HSV数据:</string>
    <string name="text_center_temperature">中心点温度:</string>
    <string name="text_disease_analysis">病害分析:</string>
    <string name="text_disease_analysis_2">病害分析</string>
    <string name="text_confidenceInterval_predicted">预测浓度置信区间(95%):</string>
    <string name="text_selectCurve">选择标准曲线</string>
    <string name="elec">电信号</string>
    <string name="colo">比色图像</string>
    <string name="thermal">光热图像</string>
    <string name="enter">进入</string>
    <string name="text_useCurve">标准曲线:</string>
    <string name="text_StartAnal">开始分析</string>
    <string name="test_select_standard_curve">请选择标准曲线</string>
    <string name="test_manageCurve">曲线管理</string>
    <string name="test_manageSample">样品管理</string>
    <string name="test_electrical_signal_detection">电信号检测</string>
    <string name="test_colorimetric_image_analysis">比色图像分析</string>
    <string name="test_photo_thermal_image_analysis">光热图像分析</string>
    <string name="test_test_results">实验记录</string>
    <string name="test_saveAll">保存所有</string>
    <string name="test_clearAll">清空所有</string>
    <string name="test_credibility_analysis">可信度分析</string>
    <string name="test_description">备注</string>
    <string name="test_description_hint">备注(可填)</string>
    <string name="title_electrical">电信号检测</string>
    <string name="electrical_getCurrentFormMultimeter">万用表测电流值</string>
    <string name="history_sure">确定</string>
    <string name="title_measureValue">万用表测量</string>
    <string name="measureValue_connection_situation">万能表连接情况:</string>
    <string name="measureValue_test_connection">扫描设备</string>
    <string name="measureValue_disconnect">断开连接</string>
    <string name="measureValue_connection_true">是</string>
    <string name="measureValue_connection_false">否</string>
    <string name="measureValue_returnResults">返回数据</string>
    <string name="measureValue_prompt_elec">档位请选择“直流电流档”(DCmA或DCuA)</string>
    <string name="measureValue_prompt_temperature">档位请选择温度档(℃/℉)</string>
    <string name="text_current_gear">当前挡位:</string>
    <string name="text_mileage">里程:</string>
    <string name="text_RealTime_value">实时测量值:</string>
    <string name="text_StartTest_elec">开始测量电流</string>
    <string name="text_StartTest_temperature">开始测量温度</string>
    <string name="text_StartTest">开始测量</string>
    <string name="text_promptEnable">测量信号与万用表档位不匹配，请更换万用表档位</string>
    <string name="electrical_startTime">开始测量时间:</string>
    <string name="electrical_endTime">结束测量时间:</string>
    <string name="text_MaxValue_4">电流最大值:</string>
    <string name="text_temperature">衡定温度值:</string>
    <string name="testValue_No">序号:</string>
    <string name="testValue_testValue">测量值:</string>
    <string name="testValue_testTime">测量时间:</string>
    <string name="title_add_standard_curve">导入标准曲线</string>
    <string name="curve_import">导入</string>
    <string name="curve_correct">校准</string>
    <string name="curve_type">类型:</string>
    <string name="curve_type_prompt">请选择曲线检测类型</string>
    <string name="curve_sample">样品:</string>
    <string name="curve_sample_prompt">请选择检测样品</string>
    <string name="curve_add_sample">添加样品</string>
    <string name="curve_name">曲线名:</string>
    <string name="curve_x_unit">x轴单位(浓度):</string>
    <string name="curve_y_unit">y轴单位:</string>
    <string name="curve_min_x">浓度最小值:</string>
    <string name="curve_max_x">浓度最大值:</string>
    <string name="curve_min_CORR">最小相关系数:</string>
    <string name="curve_input_point">输入散点(至少两个)</string>
    <string name="curve_y_number">y值数量:</string>
    <string name="curve_add_yNumber">添加Y值:</string>
    <string name="curve_alter_yNumber">修改Y值:</string>
    <string name="curve_GetCurrent">从标样获取电流值</string>
    <string name="curve_GetTemperature">从标样获取温度值</string>
    <string name="curve_GetB">从标样获取Blue值</string>
    <string name="curve_point_add">添加</string>
    <string name="curve_CORR">R:</string>
    <string name="curve_MSE">MSE:</string>
    <string name="curve_expression">表达式:</string>
    <string name="curve_description">备注:</string>
    <string name="curve_calculate">计算</string>
    <string name="curve_lgX">lg X:</string>
    <string name="curve_avgY">avg Y:</string>
    <string name="curve_X">X(浓度):</string>
    <string name="curve_Y">Y:</string>
    <string name="curve_ConfidenceInterval">预测值lgX置信区间(95%)：</string>
    <string name="title_alter_standard_curve">修改标准曲线</string>
    <string name="curve_delete">删除</string>
    <string name="curve_export">导出</string>
    <string name="title_correct_standard_curve">校准标准曲线</string>
    <string name="correctCurve_sequenceNumber">序号</string>
    <string name="correctCurve_CO">浓度X</string>
    <string name="correctCurve_Y">Y值</string>
    <string name="correctCurve_TestY">测量的Y值</string>
    <string name="correctCurve_Test">测量</string>
    <string name="correctCurve_oldChart">oldChart</string>
    <string name="correctCurve_newChart">newChart</string>
    <string name="correctCurve_Chart">Chart</string>
    <string name="correctCurve_K">K</string>
    <string name="correctCurve_B">B</string>
    <string name="correctCurve_R">R</string>
    <string name="correctCurve_R_2">R²</string>
    <string name="correctCurve_MSE">MSE</string>
    <string name="correctCurve_Expression">表达式</string>
    <string name="title_add_sample">添加样品</string>
    <string name="addSample_name_hint">请输入样品名</string>
    <string name="addSample_description_hint">请输入样品描述</string>
    <string name="title_sample_manage">样品管理</string>
    <string name="sample_name">样品名:</string>
    <string name="sample_inputName">请输入样品名(必填)</string>
    <string name="sample_inputDescription">请输入样品描述(可填)</string>
    <string name="sample_backAdd">返回添加</string>
    <string name="sample_add">添加</string>
    <string name="sample_adding">添加中…</string>
    <string name="sample_edit">修改</string>
    <string name="sample_editing">修改中…</string>
    <string name="sample_totalNum">样品数:</string>
    <string name="sample_deleteDialog_title">是否删除该图片?</string>
    <string name="sample_relationship_mlr">三模式关系MLR</string>
    <string name="title_threeModeRelationship">三模式关系</string>
    <string name="title_standardCurve">标准曲线</string>
    <string name="curveManage_noText">暂无标准曲线</string>
    <string name="curveManage_totalNum">总计:</string>
    <string name="curveManage_searchBox">曲线名/样品/类型</string>
    <string name="curveManage_type">类型:</string>
    <string name="curveManage_sample">样品:</string>
    <string name="curveManage_formula">公式:</string>
    <string name="curveManage_corr">系数:</string>
    <string name="title_colorimetric_image_analysis">比色图像分析</string>
    <string name="colorimetric_getPhoto">从图库中获取</string>
    <string name="colorimetric_alterCropPhoto">修改框选区域</string>
    <string name="colorimetric_Original_image">原图:</string>
    <string name="colorimetric_isSave">是否保存原图:</string>
    <string name="switch_on">Y</string>
    <string name="switch_off">N</string>
    <string name="colorimetric_Select_area">框选区域:</string>
    <string name="colorimetric_Corrected_RGB_color">校正后RGB颜色:</string>
    <string name="colorimetric_crop">裁剪</string>
    <string name="colorimetric_Red">R:</string>
    <string name="colorimetric_Green">G:</string>
    <string name="colorimetric_Blue">B:</string>
    <string name="colorimetric_Hue">H:</string>
    <string name="colorimetric_Saturation">S:</string>
    <string name="colorimetric_Value">V:</string>
    <string name="title_thermal_image_analysis">光热图像分析</string>
    <string name="electrical_getTemperatureFormMultimeter">万用表测温度值</string>
    <string name="thermal_infraredCamera">红外摄像仪测温</string>
    <string name="thermal_Test_results">检测结果:</string>
    <string name="title_thermal_image_take">光热图像取照</string>
    <string name="thermal_performTuning">调整</string>
    <string name="thermal_transform">更换视图</string>
    <string name="thermal_txtTuning">进行中...</string>
    <string name="thermal_disconnect">请连接设备！！</string>
    <string name="history_searchBox">样品/时间</string>
    <string name="history_credibility_true">可信</string>
    <string name="history_credibility_false">异常</string>
    <string name="history_noText">暂无实验历史</string>
    <string name="history_totalNUm">历史数:</string>
    <string name="history_unlimitedSamples">样本不限</string>
    <string name="history_unlimitedTime">时间不限</string>
    <string name="history_electrical_concentration">电信号浓度:</string>
    <string name="history_colorimetric_concentration">比色浓度:</string>
    <string name="history_thermal_concentration">光热浓度:</string>
    <string name="history_credibility">可信度:</string>
    <string name="title_historyPreview">历史预览</string>
    <string name="historyPreview_delete">删除</string>
    <string name="historyPreview_standardCurve">标准曲线</string>
    <string name="historyPreview_standardCurve_elec">电信号:</string>
    <string name="historyPreview_standardCurve_colo">比色图像:</string>
    <string name="historyPreview_standardCurve_thermal">光热图像:</string>
    <string name="historyPreview_result">检查结果</string>
    <string name="historyPreview_14_records">14次测量:</string>
    <string name="historyPreview_sequenceNumber">序号</string>
    <string name="historyPreview_gear">档位</string>
    <string name="historyPreview_mileage">里程</string>
    <string name="historyPreview_value">值</string>
    <string name="historyPreview_unit">单位</string>
    <string name="historyPreview_time">检测时间</string>
    <string name="historyPreview_deviceInfo">设备信息:</string>
    <string name="historyPreview_dataTime">检测时间:</string>
    <string name="historyPreview_CORR">相关系数:</string>
    <string name="historyPreview_function">拟合函数:</string>
    <string name="historyPreview_results_electrical">电信号检测结果</string>
    <string name="historyPreview_results_colorimetric_image">比色图像分析结果</string>
    <string name="historyPreview_results_thermal_image">光热图像分析结果</string>
    <string name="mine_experimenter">实验员:</string>
    <string name="mine_phone">手机号:</string>
    <string name="mine_image">头像:</string>
    <string name="mine_setting">设置标准曲线默认属性</string>
    <string name="mine_aboutAPP">关于APP</string>
    <string name="mine_useLanguage">语言选项</string>
    <string name="mine_update_success">更新成功</string>
    <string name="mine_update_fail">更新失败</string>
    <string name="mine_setCurve_defaultProperties">标准曲线默认属性</string>
    <string name="curveDefault_x_AxisUnit">浓度单位:</string>
    <string name="curveDefault_min_CO">最小浓度:</string>
    <string name="curveDefault_max_CO">最大浓度:</string>
    <string name="curveDefault_minCorr">最小系数:</string>
    <string name="title_useLanguage">语言选项</string>
    <string name="language_ch">中文(简体)</string>
    <string name="language_en">English</string>
    <string name="title_aboutAPP">应用详情</string>
    <string name="currentVersion">当前版本</string>
    <string name="userGuide_userGuide">用户指南.pdf</string>
    <string name="userGuide_curveImportExample">曲线导入样例.excel</string>
    <string name="userGuide_word">word</string>
    <string name="userGuide_pdf">pdf</string>
    <string name="userGuide_excel">excel</string>
    <string name="multimeter_Celsius">温度档(Celsius)</string>
    <string name="multimeter_Celsius_mileage_1">-40–300 ℃</string>
    <string name="multimeter_Celsius_mileage_2">200–1000 ℃</string>
    <string name="default_no">---</string>
    <string name="default_min_CO">0.0</string>
    <string name="default_max_CO">10.0</string>
    <string name="default_min_CORR">90.0</string>
    <string name="unit_degree">℃</string>
    <string name="unit_mol_per_mL">mol/mL</string>
    <string name="unit_mA">mA</string>
    <string name="unit_percent">%</string>
</resources>