<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:padding="10dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curve_type"
            style="@style/text_thirdTitle"/>
        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curve_sample"
            style="@style/text_thirdTitle"/>
        <TextView
            android:id="@+id/tv_sample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curve_name"
            style="@style/text_thirdTitle"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curve_x_unit"
            style="@style/text_thirdTitle"/>
        <TextView
            android:id="@+id/tv_x_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_mol_per_mL"
            android:layout_marginStart="10dp"
            android:singleLine="true"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curve_y_unit"
            style="@style/text_thirdTitle"/>
        <TextView
            android:id="@+id/tv_y_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_mA"
            android:layout_marginStart="10dp"
            android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curve_min_x"
            style="@style/text_thirdTitle"/>
        <TextView
            android:id="@+id/tv_min_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_min_CO"
            android:layout_marginStart="10dp"
            android:singleLine="true"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curve_max_x"
            style="@style/text_thirdTitle"/>
        <TextView
            android:id="@+id/tv_max_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_max_CO"
            android:layout_marginStart="10dp"
            android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curve_min_CORR"
            style="@style/text_thirdTitle"/>
        <TextView
            android:id="@+id/tv_min_CORR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_min_CORR"
            android:layout_marginStart="10dp"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_percent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curve_CORR"
            style="@style/text_thirdTitle"/>
        <TextView
            android:id="@+id/tv_corr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curve_expression"
            style="@style/text_thirdTitle"/>
        <TextView
            android:id="@+id/tv_expression"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curve_description"
            style="@style/text_thirdTitle"/>
        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:singleLine="true"/>
    </LinearLayout>
    <com.github.mikephil.charting.charts.CombinedChart
        android:id="@+id/cc_chart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"/>
</LinearLayout>