<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/history_item_background"
    android:layout_marginTop="10dp"
    android:padding="10dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="******样品检测"
            style="@style/text_secondTitle"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2024年9月24日 19:11"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_electrical_concentration"
            style="@style/text_thirdTitle"/>
        <TextView
            android:id="@+id/tv_CO_elec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_no"/>
        <TextView
            android:id="@+id/tv_unit_elec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_colorimetric_concentration"
            style="@style/text_thirdTitle"/>
        <TextView
            android:id="@+id/tv_CO_colo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_no"/>
        <TextView
            android:id="@+id/tv_unit_colo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_thermal_concentration"
            style="@style/text_thirdTitle"/>
        <TextView
            android:id="@+id/tv_CO_thermal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_no"/>
        <TextView
            android:id="@+id/tv_unit_thermal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_credibility"
            style="@style/text_thirdTitle"/>
        <TextView
            android:id="@+id/tv_credibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_credibility_false"/>
    </LinearLayout>
</LinearLayout>