<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.smpleTest.MeasureValueByMultimeterActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/top_nav_background"/>
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/icon_back"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_measureValue"
            style="@style/text_topBarTitle"/>
        <ImageView
            android:id="@+id/iv_save"
            android:layout_width="30dp"
            android:layout_height="27dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="20dp"
            android:background="@drawable/icon_save" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D6"
            android:layout_gravity="bottom"/>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fcv_ConnectMultimeterFragment"
                android:name="com.lsy.chemicaltest_new.fragments.ConnectMultimeterFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_test_results"
                    style="@style/text_firstTitle"/>

                <android.widget.Button
                    android:id="@+id/btn_StartTest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/text_StartTest"
                    android:enabled="false"
                    style="@style/ButtonStyle.Primary"/>

                <ProgressBar
                    android:id="@+id/pb_testDegree"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="20dp"
                    android:visibility="gone"/>
                <TextView
                    android:layout_marginStart="10dp"
                    android:id="@+id/tv_promptEnable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_promptEnable"
                    android:textColor="@color/btn_ripple"
                    android:textSize="12sp"
                    android:gravity="left"
                    android:visibility="gone"
                    android:maxLines="2"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_elec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/electrical_startTime"
                        style="@style/text_thirdTitle"/>
                    <TextView
                        android:id="@+id/tv_StartTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/electrical_endTime"
                        style="@style/text_thirdTitle"/>
                    <TextView
                        android:id="@+id/tv_EndTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="80dp"
                        android:layout_height="60dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/testValue_No"
                            android:gravity="center"
                            android:background="@drawable/border_all_1_white"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/testValue_testValue"
                            android:gravity="center"
                            android:background="@drawable/border_all_1_white"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/testValue_testTime"
                            android:gravity="center"
                            android:background="@drawable/border_all_1_white"/>
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_testValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="horizontal" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_MaxValue_4"
                        style="@style/text_thirdTitle"/>
                    <TextView
                        android:id="@+id/tv_MaxValue_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_no"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_degree"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_temperature"
                    style="@style/text_thirdTitle"/>
                <TextView
                    android:id="@+id/tv_centigrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_no"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_degree"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>